src/test/ui/coherence/conflicting-impl-with-err.stderr
error[E0412]: cannot find type `Thing` in `nope`
  --> $DIR/conflicting-impl-with-err.rs:4:17
   |
LL | impl From<nope::Thing> for Error {
   |                 ^^^^^ not found in `nope`

error[E0412]: cannot find type `Thing` in `nope`
  --> $DIR/conflicting-impl-with-err.rs:5:22
   |
LL |     fn from(_: nope::Thing) -> Self {
   |                      ^^^^^ not found in `nope`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
